# hildring

./: .appveyor.yml  .clang-format  .codecov.yml  .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  README.md
.github/workflows/: main.yml
app/demo/: CMakeLists.txt
cmake/: CodeCoverage.cmake  package.cmake
demo/: CMakeLists.txt  main.cpp
hildring/: CMakeLists.txt
hildring/engine/: CMakeLists.txt
hildring/engine/CMakeModules/: CodeCoverage.cmake
hildring/engine/include/: Engine.h  EntityComponentSystem.h  Painter.h  Window.h
hildring/engine/include/core/: MainLoop.h  TickLoop.h
hildring/engine/include/ecs/: Components.h  Entity.h  EntityId.h  Systems.h
hildring/engine/include/events/: Events.h
hildring/engine/include/util/: Index.h  LifetimeToken.h  LifetimeTokenStack.h
hildring/engine/source/: Engine.cpp  Painter.cpp  Window.cpp
hildring/engine/source/core/: MainLoop.cpp
hildring/engine/source/ecs/: Entity.cpp  Systems.cpp
hildring/engine/source/util/: LifetimeToken.cpp  LifetimeTokenStack.cpp
hildring/engine/test/: AnotherTest.cpp  EntityComponentSystemTest.cpp
hildring/engine/test/core/: MainLoopTest.cpp  TickLoopTest.cpp
hildring/engine/test/ecs/: ComponentsTest.cpp  EntityTest.cpp  SystemsTest.cpp
hildring/engine/test/events/: EventsTest.cpp
hildring/engine/test/threads/: LoopTest.cpp
hildring/engine/test/util/: IndexTest.cpp  LifetimeTokenStackTest.cpp  LifetimeTokenTest.cpp
lib/core/: CMakeLists.txt
lib/core/test/: MainLoopTest.cpp
lib/ecs/: CMakeLists.txt
lib/ecs/source/: Entity.cpp
lib/ecs/test/: EntityTest.cpp
lib/events/: CMakeLists.txt
lib/events/include/events/: Events.h
lib/util/: CMakeLists.txt
lib/util/include/util/: LifetimeToken.h  LifetimeTokenStack.h
lib/util/source/: LifetimeTokenStack.cpp
lib/util/test/: IndexTest.cpp  LifetimeTokenStackTest.cpp
